*feat multiline text truncation *fix overlay title truncation

--- a/packages/ui/src/Overlay.module.scss
+++ b/packages/ui/src/Overlay.module.scss
@@ -62,7 +62,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: c.$grid * 10;
+      overflow: hidden;
+      min-height: c.$grid * 16;
       margin-bottom: c.$grid * 9;
       padding: 0 c.$grid * 21; // close button width
 
@@ -93,6 +94,7 @@
 
       .title {
         margin: 0;
+        overflow: hidden;
         word-break: break-word;
       }
     }
